# BurgerAPI

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: .env  config.py  main.py
app/api/: handlers.py  main.py
app/api/routers/: products.py
app/db/: core.py
app/db/models/: products.py
app/scrape/parsers/: mcdonalds_fullmenu.py  mcdonalds_product.py
app/scrape/scrapers/: mcdonalds.py
app/scrape/utils/: http.py
requirements/: dev.txt
